--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta name="description" content="Felipe Caetano - Engenheiro de Computadores e Técnico em eletrônica. Consultoria em tecnologia, automação e desenvolvimento de sistemas." >
     <meta name="keywords" content="automação, desenvolvimento de sistemas, consultoria tecnológica, suporte técnico, Felipe Caetano, engenheiro de computação" >
-    <link rel="icon" type="image/png" href="src/assets/banner2.png" >
+    <link rel="icon" type="image/png" href="src/assets/logo.png" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Felipe Caetano - Portfólio Profissional</title>
   </head>
